Fixes map icon spacing

--- a/css/map.css
+++ b/css/map.css
@@ -6,9 +6,11 @@
   -o-background-size: cover;
   background-attachment: scroll;
   color: #fff;
+  padding: 25px;
 }
 
 #icon-map{
+    margin-bottom: 25px;
     width: 100%;
     text-align: center;
 }
@@ -22,7 +24,7 @@
     border: 4px solid white;
     width: 6em;
     height: 6em;
-    white-space: nowrap;   
+    white-space: nowrap;
     text-align: center;
 }
 
@@ -47,5 +49,5 @@ width: 400px;
 height: 400px;
 border-radius: 5px; }
     #map-canvas img {
-    max-width: none; 
+    max-width: none;
     }
